Adds the cards grid, the card title and the title components

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -30,6 +30,7 @@ $color-2:  #0f3046;
 $color-3:  #fff;
 $color-4:  #68299b;
 $color-5:  #fbfbfb;
+$color-6:  #f57823;
 
 /* Breakpoints */
 $breakpoint-mobile-small:  320px;
