--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,56 @@
+<div class="c-card-grid">
+
+  <div class="card -1-4">
+    <h4 class="c-card-title -border-1">Projects submitted</h4>
+  </div>
+
+  <div class="card -1-4">
+    <h4 class="c-card-title -border-2">Total events</h4>
+  </div>
+
+  <div class="card -1-4">
+    <h4 class="c-card-title -border-2">People</h4>
+  </div>
+
+  <div class="card -1-4">
+    <h4 class="c-card-title -border-3">Articles</h4>
+  </div>
+
+  <div class="card -2-3">
+    <h4 class="c-card-title -border-3">Featured project</h4>
+    <a disabled>
+      <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
+    </a>
+  </div>
+
+  <div class="card -1-3">
+    <h4 class="c-card-title -border-1">Project update</h4>
+    <a disabled>
+      <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
+    </a>
+  </div>
+
+  <div class="card -1-3">
+    <h4 class="c-card-title -border-2">event</h4>
+    <a disabled>
+      <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
+    </a>
+  </div>
+
+  <div class="card -1-3">
+    <h4 class="c-card-title -border-2">event</h4>
+    <a disabled>
+      <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
+    </a>
+  </div>
+
+  <div class="card -1-3">
+    <h4 class="c-card-title -border-2">event</h4>
+    <a disabled>
+      <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
+    </a>
+  </div>
+
+</div>
+
 <div class="wrapper">Home!</div>
