Fixes the fonts not loading

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,4 @@
  *= require_self
  */
 
-@import "settings", "base", "layouts/*", "components/*";
+@import "settings", "fonts", "base", "layouts/*", "components/*";
