--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -9,7 +9,7 @@ html, body {
   padding: 0;
   font-family: $font-family-1;
   font-size: $font-size-normal;
-  font-weight: $font-weight-normal;
+  font-weight: $font-weight-light;
   color: $color-2;
   height: 100%;
 }
@@ -32,9 +32,13 @@ a {
 
   &[disabled] {
     display: inline-block;
-    cursor: pointer;
+    cursor: not-allowed;
     opacity: .3;
   }
+}
+
+p {
+  line-height: 1.6;
 }
 
 .wrapper {
@@ -51,4 +55,10 @@ a {
 
 .turbolinks-progress-bar {
   background: $color-1;
+}
+
+/* Helpers */
+._two-columns {
+  column-count: 2;
+  column-gap: 40px;
 }
