--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -16,9 +16,10 @@
  *   	- "-inverse": make the title white-ish (for darker/colorfull backgrounds)
  */
 .c-title {
-    font-size: $font-size-x-medium;
-    letter-spacing: -0.5px;
-    line-height: 1.3;
+  margin: 25px 0 0 0;
+  font-size: $font-size-x-medium;
+  letter-spacing: -0.5px;
+  line-height: 1.3;
 
   &.-huge {
     font-size: $font-size-x-huge;
