--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,6 +21,9 @@
     <a disabled>
       <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
     </a>
+    <p class="_two-columns">
+      Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus Donec sed odio dui sed commodo cursus magna scelerisque nisl consectetur sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...
+    </p>
   </div>
 
   <div class="card -1-3">
@@ -28,6 +31,7 @@
     <a disabled>
       <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
     </a>
+    <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
   <div class="card -1-3">
@@ -35,6 +39,7 @@
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
     </a>
+    <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
   <div class="card -1-3">
@@ -42,6 +47,7 @@
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
     </a>
+    <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
   <div class="card -1-3">
@@ -49,6 +55,7 @@
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
     </a>
+    <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
 </div>
