--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
     <p class="_two-columns">
       Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus Donec sed odio dui sed commodo cursus magna scelerisque nisl consectetur sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...
     </p>
-    <a class="c-button -filled">Read article</a>
+    <a disabled class="c-button -filled">Read article</a>
   </div>
 
   <div class="card -1-3">
