Adds the tag-list component and updates the translations

--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -90,6 +90,8 @@
       }
     }
 
+    > .c-tag-list { margin-top: 7px; }
+
     > .c-button {
       display: inline-block;
       margin-top: 10px;
