--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,42 +1,47 @@
 <div class="c-card-grid">
 
   <div class="card -1-4">
-    <h4 class="c-card-title -border-1">Projects submitted</h4>
+    <h4 class="c-card-title -border-1"><%= t 'projects_submitted' %></h4>
   </div>
 
   <div class="card -1-4">
-    <h4 class="c-card-title -border-2">Total events</h4>
+    <h4 class="c-card-title -border-2"><%= t 'total_events' %></h4>
   </div>
 
   <div class="card -1-4">
-    <h4 class="c-card-title -border-2">People</h4>
+    <h4 class="c-card-title -border-2"><%= t 'people' %></h4>
   </div>
 
   <div class="card -1-4">
-    <h4 class="c-card-title -border-3">Articles</h4>
+    <h4 class="c-card-title -border-3"><%= t 'articles' %></h4>
   </div>
 
   <div class="card -2-3">
-    <h4 class="c-card-title -border-3">Featured project</h4>
+    <h4 class="c-card-title -border-3"><%= t 'featured_project' %></h4>
     <a disabled>
       <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
     </a>
     <p class="_two-columns">
       Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus Donec sed odio dui sed commodo cursus magna scelerisque nisl consectetur sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...
     </p>
-    <a disabled class="c-button -filled">Read article</a>
+    <a disabled class="c-button -filled"><%= t 'read_article' %></a>
   </div>
 
   <div class="card -1-3">
-    <h4 class="c-card-title -border-1">Project update</h4>
+    <h4 class="c-card-title -border-1"><%= t 'project_update' %></h4>
     <a disabled>
       <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
     </a>
+    <div class="c-tag-list">
+    	<a disabled class="tag">Tag</a>
+    	<a disabled class="tag">Tag</a>
+    	<a disabled class="tag">Tag</a>
+    </div>
     <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
   <div class="card -1-3">
-    <h4 class="c-card-title -border-2">event</h4>
+    <h4 class="c-card-title -border-2"><%= t 'event' %></h4>
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
     </a>
@@ -44,7 +49,7 @@
   </div>
 
   <div class="card -1-3">
-    <h4 class="c-card-title -border-2">event</h4>
+    <h4 class="c-card-title -border-2"><%= t 'event' %></h4>
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
     </a>
@@ -52,7 +57,7 @@
   </div>
 
   <div class="card -1-3">
-    <h4 class="c-card-title -border-2">event</h4>
+    <h4 class="c-card-title -border-2"><%= t 'event' %></h4>
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
     </a>
