Adds the card-user-profile and user-profile-picture components

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,6 +38,17 @@
     	<a disabled class="tag">Tag</a>
     </div>
     <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
+    <div class="c-card-user-profile">
+      <a disabled class="profile-picture">
+        <div class="c-user-profile-picture -small">
+      		<div class="initials">HK</div>
+      	</div>
+      </a>
+  		<div class="info">
+  			<a disabled class="name">Hyung L Kim</a>
+  			<a disabled class="organization">Cedars-Sinai Medical</a>
+  		</div>
+  	</div>
   </div>
 
   <div class="card -1-3">
