Fixes an issue with the text-indent on IE/Edge

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -44,7 +44,7 @@
 
         &.-notext > a {
           display: block;
-          text-indent: calc(-100vw - 1000px);
+          text-indent: -10000px;
         }
 
         &.-linkedin > a {
