Fixes cross-browser issues with the card-grid component

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,22 @@
 <div class="c-card-grid">
 
-  <div class="card -1-4">
+  <div class="card -1-2 -tablet-1-4">
     <h4 class="c-card-title -border-1"><%= t 'projects_submitted' %></h4>
   </div>
 
-  <div class="card -1-4">
+  <div class="card -1-2 -tablet-1-4">
     <h4 class="c-card-title -border-2"><%= t 'total_events' %></h4>
   </div>
 
-  <div class="card -1-4">
+  <div class="card -1-2 -tablet-1-4">
     <h4 class="c-card-title -border-2"><%= t 'people' %></h4>
   </div>
 
-  <div class="card -1-4">
+  <div class="card -1-2 -tablet-1-4">
     <h4 class="c-card-title -border-3"><%= t 'articles' %></h4>
   </div>
 
-  <div class="card -2-3">
+  <div class="card -tablet-2-3">
     <h4 class="c-card-title -border-3"><%= t 'featured_project' %></h4>
     <a disabled>
       <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
@@ -27,7 +27,7 @@
     <a disabled class="c-button -filled"><%= t 'read_article' %></a>
   </div>
 
-  <div class="card -1-3">
+  <div class="card -mobile-large-1-2 -tablet-1-3">
     <h4 class="c-card-title -border-1"><%= t 'project_update' %></h4>
     <a disabled>
       <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
@@ -51,7 +51,7 @@
   	</div>
   </div>
 
-  <div class="card -1-3">
+  <div class="card -mobile-large-1-2 -tablet-1-3">
     <h4 class="c-card-title -border-2"><%= t 'event' %></h4>
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
@@ -59,7 +59,7 @@
     <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
-  <div class="card -1-3">
+  <div class="card -mobile-large-1-2 -tablet-1-3">
     <h4 class="c-card-title -border-2"><%= t 'event' %></h4>
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
@@ -67,7 +67,7 @@
     <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
-  <div class="card -1-3">
+  <div class="card -mobile-large-1-2 -tablet-1-3">
     <h4 class="c-card-title -border-2"><%= t 'event' %></h4>
     <a disabled>
       <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
