--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -11,7 +11,6 @@ html, body {
   font-size: $font-size-normal;
   font-weight: $font-weight-light;
   color: $color-2;
-  height: 100%;
 }
 
 html {
@@ -59,6 +58,8 @@ p {
 
 /* Helpers */
 ._two-columns {
-  column-count: 2;
-  column-gap: 40px;
+  @media #{$mq-mobile-large} {
+    column-count: 2;
+    column-gap: 40px;
+  }
 }
