--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -14,9 +14,9 @@
  * 		- "-3-4": 3/4 of row's width
  *
  * 	Additionnaly, the classes can be used for the responsiveness:
- * 		- "-mobile-large-{1-4, 2/3, ...}": styles apply for large mobile+
- * 		- "-tablet-{1-4, 2/3, ...}":       styles apply for tablet+
- * 		- "-laptop-{1-4, 2/3, ...}":       styles apply for laptop+
+ * 		- "-mobile-large-{1-4, 2-3, ...}": styles apply for large mobile+
+ * 		- "-tablet-{1-4, 2-3, ...}":       styles apply for tablet+
+ * 		- "-laptop-{1-4, 2-3, ...}":       styles apply for laptop+
  *
  */
 .c-card-grid {
@@ -33,6 +33,7 @@
   > .card {
     position: relative;
     padding: 25px $wrapper-mobile-padding;
+    flex-basis: auto;
 
     @media #{$mq-mobile-large} {
       padding: 30px $wrapper-tablet-padding;
@@ -67,11 +68,11 @@
     }
 
     /* Default sizes */
-    &.\-1-4 { flex-basis: 25%;    }
-    &.\-1-3 { flex-basis: 33.33%; }
-    &.\-1-2 { flex-basis: 50%;    }
-    &.\-2-3 { flex-basis: 66.66%; }
-    &.\-3-4 { flex-basis: 75%;    }
+    &.\-1-4 { width: 25%;    }
+    &.\-1-3 { width: calc(100% / 3); }
+    &.\-1-2 { width: 50%;    }
+    &.\-2-3 { width: calc(2 / 3 * 100%); }
+    &.\-3-4 { width: 75%;    }
 
     /* Specific sizes relying on the screen size */
     $breakpoints: (
@@ -82,11 +83,11 @@
 
     @each $breakpoint, $mq in $breakpoints {
       @media #{$mq} {
-        &.\-#{$breakpoint}-1-4 { flex-basis: 25%;    }
-        &.\-#{$breakpoint}-1-3 { flex-basis: 33.33%; }
-        &.\-#{$breakpoint}-1-2 { flex-basis: 50%;    }
-        &.\-#{$breakpoint}-2-3 { flex-basis: 66.66%; }
-        &.\-#{$breakpoint}-3-4 { flex-basis: 75%;    }
+        &.\-#{$breakpoint}-1-4 { width: 25%;    }
+        &.\-#{$breakpoint}-1-3 { width: calc(100% / 3); }
+        &.\-#{$breakpoint}-1-2 { width: 50%;    }
+        &.\-#{$breakpoint}-2-3 { width: calc(2 / 3 * 100%); }
+        &.\-#{$breakpoint}-3-4 { width: 75%;    }
       }
     }
 
