--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -119,6 +119,7 @@
       flex-shrink: 0;
       cursor: pointer;
       z-index: 3;
+      -webkit-tap-highlight-color: transparent;
 
       > span {
         display: block;
@@ -132,12 +133,13 @@
   .mobile-drawer {
     position: fixed;
     top:  0;
-    left: -100%;
+    left: 0;
     width: 100%;
     height: 100%;
     padding: $wrapper-tablet-padding;
-    will-change: transform;
-    transition: transform .3s ease-out;
+    opacity: 0;
+    will-change: opacity;
+    transition: opacity .3s ease-out;
     background: $color-3;
     z-index: 2;
 
@@ -146,7 +148,7 @@
     }
 
     &.-opened {
-      transform: translateX(100%);
+      opacity: 1;
 
       /* The hamburger icon transform into a close one */
       & + .wrapper .hamburger-menu span {
