--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -3,7 +3,8 @@
  *	<h1 class="c-title -huge">   {Title goes here} </h1>
  *	<h1 class="c-title -big">    {Title goes here} </h1>
  *	<h2 class="c-title -medium"> {Title goes here} </h2>
- *	<h3 class="c-title -normal"> {Title goes here} </h3>
+ *  <h3 class="c-title -normal"> {Title goes here} </h3>
+ *	<h3 class="c-title -small">  {Title goes here} </h3>
  *
  *  The HTML scructure should be respected to give the document a correct
  *  hierarchy (especially usefull for accessibility matters).
@@ -36,6 +37,11 @@
   &.-medium {
     font-size: $font-size-big;
     letter-spacing: -0.7px;
+  }
+
+  &.-small {
+    font-size: $font-size-medium;
+    letter-spacing: -0.5px;
   }
 
   &.-inverse { color: $color-3; }
