User summary info minor fix

--- a/app/assets/stylesheets/components/_user-summary-info.scss
+++ b/app/assets/stylesheets/components/_user-summary-info.scss
@@ -11,12 +11,10 @@
  *		<p class="qualification"> { Qualification } </p>
  *	</div>
  *
- *	Box sizes 
- *  	- "-huge":    
- *  	- "-big":     
- *  	- "-medium":  
- *  	- "-normal": (DEFAULT style)
- *  	- "-small":  
+ *	Box sizes   
+ *  	- "-medium"  
+ *  	- "-normal" (DEFAULT style)
+ *  	- "-small"  
  *
  *	Colors modifiers (for the text):
  *		- "-color-1": blue     	  ($color-1)
