--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,7 +7,7 @@
  * 	<a href="/" class="c-button"> {Button content goes here} </a>
  *
  *	Colors modifiers (for the outline and/or background and/or text):
- *		- "-color-1": blue   ($color-1) - DEFAULT, optionnal class
+ *		- "-color-1": blue   ($color-1) - DEFAULT, optional class
  *		- "-color-2": orange ($color-6)
  *		- "-color-3": purple ($color-4)
  *
