--- a/app/assets/stylesheets/components/_section-menu.scss
+++ b/app/assets/stylesheets/components/_section-menu.scss
@@ -10,7 +10,7 @@
  *	</ul>
  *
  *	Colors modifiers (for the background):
- *		- "-b-color-1": blue   ($color-1) - DEFAULT, optional class
+ *		- "-b-color-1": blue   ($color-1) 
  *		- "-b-color-2": orange ($color-6)
  *		- "-b-color-3": purple ($color-4)
  *
