--- a/app/assets/stylesheets/components/_section-menu.scss
+++ b/app/assets/stylesheets/components/_section-menu.scss
@@ -2,46 +2,44 @@
  *
  * 	Preferred markup (for accessibility matter):
  *	<ul class="c-section-menu">
- *		<li class="section-menu-item"><%= link_to (t 'data'), {path} %></li> // Optional?
- *		<li class="section-menu-item"><%= link_to (t 'projects'), {path} %></li>
- *		<li class="section-menu-item"><%= link_to (t 'people'), {path} %></li>
- *		<li class="section-menu-item"><%= link_to (t 'events'), {path} %></li>
- *		<li class="section-menu-item"><%= link_to (t 'posts'), {path} %></li> // Optional?
+ *		<li class="item"><%= link_to (t 'Data'), {path} %></li> // Optional?
+ *		<li class="item"><%= link_to (t '{ Item name }'), {path} %></li>
  *	</ul>
  *
  *	Colors modifiers (for the background):
- *		- "-b-color-1": blue   ($color-1) 
+ *		- "-b-color-1": blue   ($color-1)
  *		- "-b-color-2": orange ($color-6)
  *		- "-b-color-3": purple ($color-4)
  *
  */
 
- .c-section-menu {
- 	display: flex;
- 	width: 100%;
- 	font-family: $font-family-1;
- 	font-weight: $font-weight-bold;
- 	opacity: .7;
+.c-section-menu {
+  display: flex;
+  width: 100%;
+  font-family: $font-family-1;
+  font-weight: $font-weight-bold;
+  font-size: $font-size-x-medium;
+  opacity: .7;
 
- 	&.-b-color-1 { background-color: $color-1 }
- 	&.-b-color-2 { background-color: $color-6 }
- 	&.-b-color-3 { background-color: $color-4 }
-	
-	.section-menu-item {
-		padding: 12px 24px;
+  &.-b-color-1 { background-color: $color-1 }
+  &.-b-color-2 { background-color: $color-6 }
+  &.-b-color-3 { background-color: $color-4 }
 
-		& a {
-			color: $color-3;
-		}
+  .item {
+    padding: 12px 24px;
 
-		&.-active {
-			box-shadow: inset 0 0 2px 0 lightgrey;
-			color: $color-2;
-			background-color: $color-3;
+    & a {
+      color: $color-3;
+    }
 
-			& a {
-				color: $color-2;
-			}
-		}
-	}
- }
+    &.-active {
+      box-shadow: inset 0 0 2px 0 lightgrey;
+      color: $color-2;
+      background-color: $color-3;
+
+      & a {
+        color: $color-2;
+      }
+    }
+  }
+}
