--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -1,27 +1,27 @@
 /**
-*
-*	<div class="c-badge">{content}</div>
-*
-* 	Badge states classes:
-*		- "-color-1": blue   ($color-1) - DEFAULT, optional class
-*		- "-color-2": orange ($color-6)
-*		- "-color-3": purple ($color-4)
-*
-*/
+ *
+ *	<div class="c-badge">{content}</div>
+ *
+ *  Badge states classes:
+ *		- "-color-1": blue   ($color-1) - DEFAULT, optional class
+ *		- "-color-2": orange ($color-6)
+ *		- "-color-3": purple ($color-4)
+ *
+ */
 
 .c-badge {
-	width: fit-content;
-	padding: 1px 7px;
+  display: inline-block;
+	padding: 1px 7px 2px;
 	border-radius: 40%;
 	background-color: $color-1;
-	font-size: 11px;
+	font-size: $font-size-tiny;
 	color: $color-3;
 
-	&.-color-2 { 
+	&.-color-2 {
 		background-color: $color-6;
 	}
 
-	&.-color-3 { 
+	&.-color-3 {
 		background-color: $color-4;
-	}	
+	}
 }
