--- a/app/assets/stylesheets/components/_user-menu.scss
+++ b/app/assets/stylesheets/components/_user-menu.scss
@@ -1,23 +1,16 @@
 /**
  *
- * 	Variables:
- *		- @num: number of the badge, individual for each tab
- *		- link: tab's link, individual for each tab
- *
  *	<ul class="c-user-menu">
- *		<li class="menu-tab"><%= link_to (t 'network'), {link} %> <% if {@num} != 0 %><div class="c-badge"><%= {@num} %></div><% end %></li>
- *	    <li class="menu-tab"><%= link_to (t 'projects'), {link} %> <% if {@num} != 0 %><div class="c-badge"><%= {@num} %></div><% end %></li>
- *	    <li class="menu-tab"><%= link_to (t 'articles'), {link} %> <% if {@num} != 0 %><div class="c-badge"><%= {@num} %></div><% end %></li>
- *	    <li class="menu-tab"><%= link_to (t 'massages'), {link} %> <% if {@num} != 0 %><div class="c-badge"><%= {@num} %></div><% end %></li>
- *	    <li class="menu-tab"><%= link_to (t 'saved_maps'), {link} %> <% if {@num} != 0 %><div class="c-badge"><%= {@num} %></div><% end %></li>
+ *		<li class="menu-tab">{ content }<div class="c-badge">{ content }</div></li>
+ *	  <li class="menu-tab">{ content }<div class="c-badge">{ content }</div></li>
  *	</ul>
  *
  *
- *	Sets tab state 
+ *	Sets tab state
  *		- -active: underlines the selected tab
  *
  *	Colors modifiers (for the underline):
- *		- "-ln-color-1": blue   ($color-1) 
+ *		- "-ln-color-1": blue   ($color-1)
  *		- "-ln-color-2": orange ($color-6)
  *		- "-ln-color-3": purple ($color-4) - DEFAULT, optional class
  */
@@ -29,28 +22,28 @@
 	width: 100%;
 
 	@media #{$mq-tablet} {
-      flex-flow: nowrap;
-    }
+    flex-flow: nowrap;
+  }
 
 	.menu-tab {
 		display: flex;
 		margin-right: 25px;
 		text-transform: uppercase;
 		font-size: $font-size-x-small;
-	    margin-bottom: 10px;
+    margin-bottom: 10px;
 
 		@media #{$mq-tablet} {
-	      margin-right: 65px;
-	      margin-bottom: 0;
-	    }
+      margin-right: 65px;
+      margin-bottom: 0;
+    }
 
 		& a {
 			margin-right: 2px;
 			padding-bottom: 7px;
 
 			@media #{$mq-tablet} {
-		      margin-right: 5px;
-		    }
+	      margin-right: 5px;
+	    }
 		}
 
 		&.-active {
