--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -75,6 +75,67 @@
     <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...</p>
   </div>
 
+  <div class="card -mobile-large-1-2 -tablet-1-3">
+    <h4 class="c-card-title -border-3"><%= t 'new_organization' %></h4>
+    <a disabled>
+      <h3 class="c-title">St. Jude Children's Research Hospital</h3>
+    </a>
+    <p>Non-profit organization</p>
+    <p><strong>42</strong> Following · <strong>154</strong> Followers</p>
+  </div>
+
+  <div class="card -mobile-large-1-2 -tablet-1-3">
+    <h4 class="c-card-title -border-3"><%= t 'featured_organization' %></h4>
+    <a disabled>
+      <h3 class="c-title">St. Jude Children's Research Hospital</h3>
+    </a>
+    <p>Non-profit organization</p>
+    <p><strong>42</strong> Following · <strong>154</strong> Followers</p>
+  </div>
+
+  <div class="card -mobile-large-1-2 -tablet-1-3">
+    <h4 class="c-card-title -border-3"><%= t 'featured_organization' %></h4>
+    <a disabled>
+      <h3 class="c-title">St. Jude Children's Research Hospital</h3>
+    </a>
+    <p>Non-profit organization</p>
+    <p><strong>42</strong> Following · <strong>154</strong> Followers</p>
+  </div>
+
+  <div class="card -mobile-large-1-2 -tablet-1-3">
+    <h4 class="c-card-title -border-1"><%= t 'new_project' %></h4>
+    <a disabled>
+      <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
+    </a>
+    <p>Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur tempus ...</p>
+  </div>
+
+  <div class="card -mobile-large-1-2 -tablet-2-3 -content-1-2 -color-2 new-post-background">
+    <h4 class="c-card-title -border-4"><%= t 'new_post' %></h4>
+    <a disabled>
+      <h3 class="c-title">Qualifying Multi-Transcript Signatures for Active Surveillance of Prostate Cancer</h3>
+    </a>
+    <p>Lorem ipsum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.</p>
+  </div>
+
+   <div class="card -tablet-2-3">
+      <h4 class="c-card-title -border-3"><%= t 'new_post' %></h4>
+      <a disabled>
+        <h3 class="c-title">A Novel Mechanism of GTPase Regulation: Arl2 Interaction with TBCD</h3>
+      </a>
+      <p class="_two-columns">
+        Qualifying Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus Donec sed odio dui sed commodo cursus magna scelerisque nisl consectetur sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Curabitur blandit tempus...
+      </p>
+      <a disabled class="c-button -filled"><%= t 'read_article' %></a>
+    </div>
+
+    <div class="card -mobile-large-1-2 -tablet-1-3">
+      <h4 class="c-card-title -border-2">London, United Kingdom</h4>
+      <a disabled>
+        <h3 class="c-title">Jun 30th<br/>EMA-ESMO Workshop on Single-Arm Trials in Oncology</h3>
+      </a>
+      <p>Single-arm trials (SATs) have led to regulatory approval of oncology products in case of dramatic activity in well-defined populations with high unmet...</p>
+    </div>
+
 </div>
 
-<div class="wrapper">Home!</div>
