Section menu improved

--- a/app/assets/stylesheets/components/_map-menu.scss
+++ b/app/assets/stylesheets/components/_map-menu.scss
@@ -3,9 +3,10 @@
  *   <div class="c-map-menu">
  *    <ul class="list">
  *      <li class="item">
- *      <svg class="icon icon-">
- *        <use xlink:href="#icon-"></use>
- *      </svg>
+ *        <svg class="icon icon-">
+ *          <use xlink:href="#icon-"></use>
+ *        </svg>
+ *      </li>
  *    </ul>
  *    <ul class="list">
  *      <li class="item">
