--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,1 +1,9 @@
-<div id="map" class="c-map"></div>
+<div class="c-map">
+	<div id="map" class="map"></div>
+	<ul class="c-section-menu">
+	  <li><%= link_to (t 'projects'), '/map', :class => "-active" %></li>
+	  <li><%= link_to (t 'people'), '/map' %></li>
+	  <li><%= link_to (t 'events'), '/map' %></li>
+	</ul>	
+</div>
+
