Map page structure

--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -30,9 +30,9 @@
   }
 
   &.-big {
-    font-size: $font-size-huge;
+    font-size: $font-size-x-big;
     letter-spacing: -1.7px;
-    line-height: 63px;
+    line-height: 55px;
   }
 
   &.-medium {
