--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -13,22 +13,22 @@
 <div class="c-card-grid">
 
   <div class="card -1-2 -tablet-1-4">
-    <h4 class="c-card-title -border-1"><%= t 'projects_submitted' %></h4>
+    <h4 class="c-card-title -border-1"><%= t 'breast' %></h4>
     <h2 class="c-title -big">55</h3>
   </div>
 
   <div class="card -1-2 -tablet-1-4">
-    <h4 class="c-card-title -border-2"><%= t 'total_events' %></h4>
+    <h4 class="c-card-title -border-2"><%= t 'non_melanoma_skin_cancer' %></h4>
     <h2 class="c-title -big">215</h3>
   </div>
 
   <div class="card -1-2 -tablet-1-4">
-    <h4 class="c-card-title -border-2"><%= t 'people' %></h4>
+    <h4 class="c-card-title -border-2"><%= t 'trachea_bronchus_and_lung' %></h4>
     <h2 class="c-title -big">350</h3>
   </div>
 
   <div class="card -1-2 -tablet-1-4">
-    <h4 class="c-card-title -border-3"><%= t 'articles' %></h4>
+    <h4 class="c-card-title -border-3"><%= t 'other' %></h4>
     <h2 class="c-title -big">1047</h3>
   </div>
 
