Map menu component

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,1 +1,22 @@
-<div class="wrapper">Countries!</div>
+<div class="wrapper">Countries!
+
+
+</div>
+<div class="c-map-menu wrapper">
+  <ul class="list">
+    <li class="item">
+      <svg class="icon icon-">
+        <use xlink:href="#icon-"></use>
+      </svg>
+      { content }
+    </li>
+  </ul>
+  <ul class="list">
+    <li class="item">
+      <svg class="icon icon-">
+        <use xlink:href="#icon-"></use>
+      </svg>
+      { content }
+    </li>
+  </ul>
+</div>
