--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,1 +1,37 @@
+<div class="c-section-intro wrapper -color-4">
+  <div class="intro-info">
+    <h1 class="c-title -big">Brain, Nervous <br/>System</h1>
+    <div class="c-numbers-grid">
+      <div class="number-info">
+        <label class="title">country</label>
+        <p class="number">91</p>
+      </div>
+      <div class="number-info">
+        <label class="title">country</label>
+        <p class="number">91</p>
+      </div>
+      <div class="number-info">
+        <label class="title">country</label>
+        <p class="number">91</p>
+      </div>
+    </div>
+    <p>Description lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae vulputate quam. Donec nec lorem ac diam maximus dictum. Nunc tincidunt vel ex in gravida. Suspendisse sed molestie metus. Proin nec vehicula eros, eget fermentum orci. Pellentesque rhoncus consectetur lectus, vitae rhoncus mi vestibulum quis. In facilisis purus non urna molestie vulputate. </p>
+  </div>
+  <div class="country-buttons">
+    <a href="/" class="c-button -inverse -filled btn-follow">Follow</a>
+    <div>
+      <a href="/" class="c-button -inverse">+ Project</a>
+      <a href="/" class="c-button -inverse">+ Post</a>
+      <a href="/" class="c-button -inverse">+ Event</a>
+    </div>
+  </div>
+  <ul class="c-section-menu wrapper">
+    <li class="item"><%= link_to (t 'data'), '/' %></li>
+    <li class="item"><%= link_to (t 'projects'), '/' %></li>
+    <li class="item"><%= link_to (t 'people'), '/' %></li>
+    <li class="item"><%= link_to (t 'events'), '/' %></li>
+    <li class="item"><%= link_to (t 'post'), '/' %></li>
+  </ul>
+</div>
+
 <div class="wrapper">Countries!</div>
