--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,6 +10,8 @@
  *		- "-color-1": blue   ($color-1) - DEFAULT, optional class
  *		- "-color-2": orange ($color-6)
  *		- "-color-3": purple ($color-4)
+ *    - "-color-4": white  ($color-3)
+ *    - "-color-5": dark   ($color-2)
  *
  * 	Other modifiers:
  * 		- "-filled": button filled with the color (default outlined)
@@ -21,6 +23,7 @@
  */
 
 .c-button {
+  display: inline-block;
   padding: 10px 30px;
   font-size: $font-size-x-small;
   font-weight: $font-weight-bold;
@@ -32,18 +35,30 @@
    * "button" HTML markup */
   cursor: pointer;
   transition: box-shadow .15s;
+  text-align: center;
 
   &:hover {
     box-shadow: 0px 7px 15px 0px rgba(0, 0, 0, .10);
   }
 
-  &.-color-2 { 
+  &.-color-2 {
     color: $color-6;
     border: 1px solid $color-6;
   }
-  &.-color-3 { 
-    color: $color-4; 
+
+  &.-color-3 {
+    color: $color-4;
     border: 1px solid $color-4;
+  }
+
+  &.-color-4 {
+    color: $color-3;
+    border: 1px solid $color-3;
+  }
+
+  &.-color-5 {
+    color: $color-2;
+    border: 1px solid $color-2;
   }
 
   &.-respect-text {
