--- a/app/assets/stylesheets/components/_section-intro.scss
+++ b/app/assets/stylesheets/components/_section-intro.scss
@@ -12,15 +12,29 @@
  *      <li class="item"><%= link_to (t '{ name }'), { path } %></li>
  *    </ul>
  *
+ *  Colors modifiers (for the text):
+ *    - "-color-1": blue   ($color-1)
+ *    - "-color-2": orange ($color-6)
+ *    - "-color-3": purple ($color-4)
+ *    - "-color-4": white  ($color-3)
+ *    - "-color-5": dark   ($color-2) - DEFAULT, optional class
+ *
  */
 
 .c-section-intro {
   position: relative;
   width: 100%;
   min-height: 60px; // In case there is not content
+  color: $color-2;
+
+  &.-color-1 * { color: $color-1; }
+  &.-color-2 * { color: $color-6; }
+  &.-color-3 * { color: $color-4; }
+  &.-color-4 * { color: $color-3; }
 
   > .c-section-menu {
     position: absolute;
     bottom: 0;
+    left: 0;
   }
 }
