Map: print markers on the map

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -32,6 +32,9 @@ $color-4:  #68299b;
 $color-5:  #fbfbfb;
 $color-6:  #f57823;
 
+/* Shadows */
+$shadow-1: 0 7px 10px rgba(0, 0, 0, 0.1);
+
 /* Breakpoints */
 $breakpoint-mobile-small:  320px;
 $breakpoint-mobile-large:  425px;
