Different types of markers

--- a/app/assets/stylesheets/components/_map-marker.scss
+++ b/app/assets/stylesheets/components/_map-marker.scss
@@ -9,9 +9,32 @@
 
 
 .c-marker {
-	background: $color-3;
 	border-radius: 50%;
 	box-shadow: $shadow-1;
+
+  &.project-markers {
+    background: $color-3;
+
+    .value {
+      color: $color-2;
+    }
+  }
+
+  &.people-markers {
+    background: $color-4;
+
+    .value {
+      color: $color-3;
+    }
+  }
+
+  &.event-markers {
+    background: $color-6;
+
+    .value {
+      color: $color-3;
+    }
+  }
 
 	.arc {
 
@@ -21,7 +44,7 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%,-50%);		
+		transform: translate(-50%,-50%);
 		font-size: $font-size-big;
 		font-weight: $font-weight-bold;
 		color: $color-2;
