--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,10 +1,10 @@
 <div class="c-map">
 	<div id="map" class="map"></div>
 	<ul class="c-section-menu">
-	  <li><%= link_to (t 'projects'), '/map', :class => "-active" %></li>
-	  <li><%= link_to (t 'people'), '/map' %></li>
-	  <li><%= link_to (t 'events'), '/map' %></li>
-	</ul>	
+	  <li><%= link_to (t 'projects'), '/map?type=project-markers', :class => "-active" %></li>
+	  <li><%= link_to (t 'people'), '/map?type=people-markers' %></li>
+	  <li><%= link_to (t 'events'), '/map?type=event-markers' %></li>
+	</ul>
 </div>
 
 <!-- c-map-menu -->
