--- a/app/assets/stylesheets/components/_map-menu.scss
+++ b/app/assets/stylesheets/components/_map-menu.scss
@@ -3,7 +3,7 @@
  *  <div class="c-map-menu wrapper">
  *    <ul class="list">
  *      <li class="item">
- *        <svg class="icon icon-">
+ *        <svg class="c-svg">
  *          <use xlink:href="#icon-"></use>
  *        </svg>
  *        { content }
@@ -11,7 +11,7 @@
  *    </ul>
  *    <ul class="list">
  *      <li class="item">
- *        <svg class="icon icon-">
+ *        <svg class="c-svg">
  *          <use xlink:href="#icon-"></use>
  *        </svg>
  *        { content }
