--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,13 +1,31 @@
-<div class="c-map">
-	<div id="map" class="map"></div>
+<div class="c-section-intro">
+	<div id="map" class="map c-map"></div>
 	<ul class="c-section-menu">
-	  <li><%= link_to (t 'projects'), '/map?type=project-markers', :class => "-active" %></li>
-	  <li><%= link_to (t 'people'), '/map?type=people-markers' %></li>
-	  <li><%= link_to (t 'events'), '/map?type=event-markers' %></li>
+	  <li><%= link_to (t 'projects'), map_path(request.query_parameters.merge({ type: 'project-markers' })), :class => active_param?('type','project-markers') %></li>
+	  <li><%= link_to (t 'people'), map_path(request.query_parameters.merge({ type: 'people-markers' })), :class => active_param?('type','people-markers') %></li>
+	  <li><%= link_to (t 'events'), map_path(request.query_parameters.merge({ type: 'event-markers' })), :class => active_param?('type','event-markers') %></li>
 	</ul>
 </div>
 
 <!-- c-map-menu -->
+<div class="c-map-menu wrapper">
+  <ul class="list">
+    <li class="item">
+      <svg class="c-svg">
+        <use xlink:href="#icon-"></use>
+      </svg>
+      { content }
+    </li>
+  </ul>
+  <ul class="list">
+    <li class="item">
+      <svg class="c-svg">
+        <use xlink:href="#icon-"></use>
+      </svg>
+      { content }
+    </li>
+  </ul>
+</div>
 
 <!-- c-grid-proyects -->
 <div class="c-card-grid">
