--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -17,7 +17,7 @@
     </div>
     <p>Description lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae vulputate quam. Donec nec lorem ac diam maximus dictum. Nunc tincidunt vel ex in gravida. Suspendisse sed molestie metus. Proin nec vehicula eros, eget fermentum orci. Pellentesque rhoncus consectetur lectus, vitae rhoncus mi vestibulum quis. In facilisis purus non urna molestie vulputate. </p>
   </div>
-  <div class="country-buttons">
+  <div class="c-buttons-group">
     <a href="/" class="c-button -inverse -filled btn-follow">Follow</a>
     <div>
       <a href="/" class="c-button -inverse">+ Project</a>
@@ -32,6 +32,11 @@
     <li class="item"><%= link_to (t 'events'), '/' %></li>
     <li class="item"><%= link_to (t 'post'), '/' %></li>
   </ul>
+</div>
+
+<div class="map-container">
+  <div class="c-map"></div>
+  <div class="c-legend"></div>
 </div>
 
 <div class="wrapper">Countries!</div>
