Map legend component

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -36,7 +36,16 @@
 
 <div class="map-container">
   <div class="c-map"></div>
-  <div class="c-legend"></div>
+
+  <div class="c-map-legend">
+    <h3 class="c-title -normal">More developed & less developed countries</h3>
+    <ul class="legend">
+      <li class="item"><div class="legend-icon -color-1"></div>To be defined</li>
+      <li class="item"><div class="legend-icon -color-2"></div>To be defined</li>
+      <li class="item"><div class="legend-icon -color-3"></div>To be defined</li>
+      <li class="item"><div class="legend-icon -color-4"></div>To be defined</li>
+      <li class="item"><div class="legend-icon -color-5"></div>To be defined</li>
+    </ul>
+  </div>
 </div>
 
-<div class="wrapper">Countries!</div>
