--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,51 +1,59 @@
-<div class="c-section-intro wrapper -color-4">
-  <div class="intro-info">
-    <h1 class="c-title -big">Brain, Nervous <br/>System</h1>
-    <div class="c-numbers-grid">
-      <div class="number-info">
-        <label class="title">country</label>
-        <p class="number">91</p>
-      </div>
-      <div class="number-info">
-        <label class="title">country</label>
-        <p class="number">91</p>
-      </div>
-      <div class="number-info">
-        <label class="title">country</label>
-        <p class="number">91</p>
+<section class="country">
+  <div class="c-section-intro wrapper -color-4">
+    <div class="intro-info">
+      <h1 class="c-title -big">Egypt</h1>
+      <div class="c-numbers-grid">
+        <div class="number-info">
+          <label class="title">Projects</label>
+          <p class="number">18</p>
+        </div>
+        <div class="number-info">
+          <label class="title">Organizations</label>
+          <p class="number">12</p>
+        </div>
+        <div class="number-info">
+          <label class="title">Events</label>
+          <p class="number">12</p>
+        </div>
+        <div class="number-info">
+          <label class="title">Daly datasets</label>
+          <p class="number">5</p>
+        </div>
       </div>
     </div>
-    <p>Description lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae vulputate quam. Donec nec lorem ac diam maximus dictum. Nunc tincidunt vel ex in gravida. Suspendisse sed molestie metus. Proin nec vehicula eros, eget fermentum orci. Pellentesque rhoncus consectetur lectus, vitae rhoncus mi vestibulum quis. In facilisis purus non urna molestie vulputate. </p>
-  </div>
-  <div class="c-buttons-group">
-    <a href="/" class="c-button -inverse -filled btn-follow">Follow</a>
-    <div>
-      <a href="/" class="c-button -inverse">+ Project</a>
-      <a href="/" class="c-button -inverse">+ Post</a>
-      <a href="/" class="c-button -inverse">+ Event</a>
+    <div class="c-buttons-group">
+      <a href="/" class="c-button -inverse -filled btn-follow">Follow</a>
+      <div>
+        <a href="/" class="c-button -inverse">+ Project</a>
+        <a href="/" class="c-button -inverse">+ Post</a>
+        <a href="/" class="c-button -inverse">+ Event</a>
+      </div>
     </div>
-  </div>
-  <ul class="c-section-menu wrapper">
-    <li class="item"><%= link_to (t 'data'), '/' %></li>
-    <li class="item"><%= link_to (t 'projects'), '/' %></li>
-    <li class="item"><%= link_to (t 'people'), '/' %></li>
-    <li class="item"><%= link_to (t 'events'), '/' %></li>
-    <li class="item"><%= link_to (t 'post'), '/' %></li>
-  </ul>
-</div>
-
-<div class="map-container">
-  <div class="c-map"></div>
-
-  <div class="c-map-legend">
-    <h3 class="c-title -normal">More developed & less developed countries</h3>
-    <ul class="legend">
-      <li class="item"><div class="legend-icon -color-1"></div>To be defined</li>
-      <li class="item"><div class="legend-icon -color-2"></div>To be defined</li>
-      <li class="item"><div class="legend-icon -color-3"></div>To be defined</li>
-      <li class="item"><div class="legend-icon -color-4"></div>To be defined</li>
-      <li class="item"><div class="legend-icon -color-5"></div>To be defined</li>
+    <ul class="c-section-menu wrapper">
+      <li class="item -active"><%= link_to (t 'data'), '/' %></li>
+      <li class="item"><%= link_to (t 'projects'), '/' %></li>
+      <li class="item"><%= link_to (t 'people'), '/' %></li>
+      <li class="item"><%= link_to (t 'events'), '/' %></li>
+      <li class="item"><%= link_to (t 'post'), '/' %></li>
     </ul>
   </div>
-</div>
+
+  <div class="country-data"></div>
+    <div class="c-legend-map-container">
+      <div class="c-map"></div>
+
+      <div class="c-map-legend">
+        <h3 class="c-title -normal">Radiothearpy coverage and untreated deaths in pain</h3>
+        <ul class="legend">
+          <li class="item"><div class="legend-icon -color-1"></div>To be defined</li>
+          <li class="item"><div class="legend-icon -color-2"></div>To be defined</li>
+          <li class="item"><div class="legend-icon -color-3"></div>To be defined</li>
+          <li class="item"><div class="legend-icon -color-4"></div>To be defined</li>
+          <li class="item"><div class="legend-icon -color-5"></div>To be defined</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
 
