--- a/app/assets/stylesheets/components/_section-intro.scss
+++ b/app/assets/stylesheets/components/_section-intro.scss
@@ -1,18 +1,16 @@
 /**
  *
  *  Preferred markup (for accessibility matter):
- *   <div class="c-section-intro">
- *      { content }
- *      { section-menu }
+ *
+ *    <div class="c-section-intro wrapper">
+ *      <div class="intro-info">
+ *        { Content }
+ *      </div>
+ *      { c-buttons-group } // Optioinal
+ *      { c-section-menu } // Optional
  *    </div>
  *
- *  Section menu template
- *    <ul class="c-section-menu">
- *      <li class="item"><%= link_to (t 'data'), '/' %></li>
- *      <li class="item"><%= link_to (t '{ name }'), { path } %></li>
- *    </ul>
- *
- *  Colors modifiers (for the text):
+ *  Color modifiers (for the text):
  *    - "-color-1": blue   ($color-1)
  *    - "-color-2": orange ($color-6)
  *    - "-color-3": purple ($color-4)
@@ -26,6 +24,28 @@
   width: 100%;
   min-height: 60px; // In case there is not content
   color: $color-2;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  padding-top: 60px;
+  padding-bottom: 130px;
+
+  @media #{$mq-tablet} {
+    flex-flow: row;
+  }
+
+  .intro-info {
+    width: 100%;
+
+    @media #{$mq-tablet} {
+      width: 61.6%;
+    }
+
+    .c-title {
+      margin: 0;
+      margin-bottom: 30px;
+    }
+  }
 
   &.-color-1 * { color: $color-1; }
   &.-color-2 * { color: $color-6; }
