--- a/app/assets/stylesheets/components/_section-intro.scss
+++ b/app/assets/stylesheets/components/_section-intro.scss
@@ -3,7 +3,7 @@
  *  Preferred markup (for accessibility matter):
  *
  *    <div class="c-section-intro">
- *      <div class="c-section-intro wrapper">
+ *      <div class="intro-info wrapper">
  *        <div class="info">
  *          { Content }
  *        </div>
@@ -13,13 +13,6 @@
  *    </div>
  *
  *  Color modifiers (for the text):
- *    - "-color-1": blue   ($color-1)
- *    - "-color-2": orange ($color-6)
- *    - "-color-3": purple ($color-4)
- *    - "-color-4": white  ($color-3)
- *    - "-color-5": dark   ($color-2) - DEFAULT, optional class
- *
- *  Colors modifiers (for the text):
  *    - "-color-1": blue   ($color-1)
  *    - "-color-2": orange ($color-6)
  *    - "-color-3": purple ($color-4)
