Country: map added

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,6 +1,6 @@
-
 <section class="country">
   <div class="c-section-intro -color-4">
+    <div id="map" class="map c-map"></div>
     <div class="intro-info wrapper">
       <div class="info">
         <h1 class="c-title -big">Egypt</h1>
@@ -36,7 +36,7 @@
         <li class="item"><%= link_to (t 'projects'), '/' %></li>
         <li class="item"><%= link_to (t 'people'), '/' %></li>
         <li class="item"><%= link_to (t 'events'), '/' %></li>
-        <li class="item"><%= link_to (t 'post'), '/' %></li>
+        <li class="item"><%= link_to (t 'posts'), '/' %></li>
       </ul>
     </div>
   </div>
